--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         .stock-info {
             margin-top: 10px;
             font-size: 1em;
-            color: #f39c12;
+            color: #20ff03;
         }
 
         .out-of-stock {
@@ -170,7 +170,7 @@
             <img src="photo_2024-12-31_00-35-22.jpg" alt="Produk 1">
             <h3>Apk predictor spaceman versi terbaru</h3>
             <p><strong>Rp 100.000</strong></p>
-            <p class="stock-info">Stok Tersedia: 50</p>
+            <p class="stock-info">Stok Tersedia</p>
             <button onclick="window.location.href='https://lynk.id/botspaceman'">Beli Sekarang</button>
         </div>
         <div class="product-card">
@@ -217,7 +217,7 @@
 </section>
 
 <footer>
-    &copy; 2024 Blog pribadi | Dibuat oleh vixzaa
+    &copy; 2024 Blog pribadi | Dibuat oleh @Botspacemanpredictor_bot
 </footer>
 
 </body>
